Upping version and changing file menu

--- a/seleniumbuilder/chrome/content/html/body.html
+++ b/seleniumbuilder/chrome/content/html/body.html
@@ -44,7 +44,7 @@ to have some difference to give the user the idea of a bit of progress
   </div>
   
   <ul id="menu" style="display: none;">
-    <li><a href="#">Script</a>
+    <li><a href="#">File</a>
         <ul>
             <li id="script-save-li" style="display: none;"><a href="#script-save" name="script-save" id="script-save">Save to server</a></li>
             <li><a href="#script-export" name="script-export" id="script-export">Save to disk</a></li>
