--- a/seleniumbuilder/chrome/content/html/body.html
+++ b/seleniumbuilder/chrome/content/html/body.html
@@ -74,6 +74,7 @@ to have some difference to give the user the idea of a bit of progress
         </span>
         <li><a href="#suite-recordscript" name="suite-recordscript" id="suite-recordscript">Record new script</a></li>
         <li><a href="#suite-addscript" name="suite-addscript" id="suite-addscript">Add script from file</a></li>
+        <li><a href="#suite-addscript-sel2" name="suite-addscript-sel2" id="suite-addscript-sel2">Add script from Selenium 2 file</a></li>
         <span id="multiscript-1">
           <li><a href="#suite-removescript" name="suite-removescript" id="suite-removescript">Remove current script</a></li>
           <li>Scripts</li>
@@ -118,6 +119,9 @@ to have some difference to give the user the idea of a bit of progress
         </li>
         <li id="startup-import">
           <h3><a name="import" href="#import">Open</a> a test file</h3>
+        </li>
+        <li id="startup-import-sel2">
+          <h3><a name="import" href="#import">Open</a> a Selenium 2 test file</h3>
         </li>
         <li id="startup-suite-import">
           <h3><a name="suite-import" href="#suite-import">Open</a> a test suite</h3>
