--- a/seleniumbuilder/chrome/content/html/body.html
+++ b/seleniumbuilder/chrome/content/html/body.html
@@ -98,7 +98,10 @@ to have some difference to give the user the idea of a bit of progress
           <h3><a name="import" href="#import">Open</a> a test file</h3>
         </li>
         <li id="startup-import-sel2">
-          <h3><a name="import" href="#import">Open</a> a Selenium 2 test file</h3>
+          <h3><a name="import" href="#import">Import</a> a Selenium 2 test file as a Selenium 1 script</h3>
+        </li>
+        <li id="startup-open-sel2">
+          <h3><a name="open" href="#open">Open</a> a Selenium 2 test file <i>(under development)</i></h3>
         </li>
         <li id="startup-suite-import">
           <h3><a name="suite-import" href="#suite-import">Open</a> a test suite</h3>
