Fixed bugs related to loading/importing scripts into suites. Implemented local suite playback across Selenium 1 and Selenium 2 scripts. (Suites can still only be saved when composed purely of Selenium-1 scripts as there is no Selenium-2 suite standard.)

--- a/seleniumbuilder/chrome/content/html/body.html
+++ b/seleniumbuilder/chrome/content/html/body.html
@@ -74,6 +74,7 @@ to have some difference to give the user the idea of a bit of progress
         </span>
         <li><a href="#suite-recordscript" name="suite-recordscript" id="suite-recordscript">Record new script</a></li>
         <li><a href="#suite-addscript" name="suite-addscript" id="suite-addscript">Add script from file</a></li>
+        <li><a href="#suite-importscript-sel2" name="suite-importscript-sel2" id="suite-importscript-sel2">Add imported Selenium 1 script from Selenium 2 file</a></li>
         <li><a href="#suite-addscript-sel2" name="suite-addscript-sel2" id="suite-addscript-sel2">Add script from Selenium 2 file</a></li>
         <span id="multiscript-1">
           <li><a href="#suite-removescript" name="suite-removescript" id="suite-removescript">Remove current script</a></li>
