Work on new GUI code.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -231,11 +231,11 @@
     <div id="bottom"></div>
   </div><!-- Splash screen -->
 
-  <div id="cover">
+  <div id="booting">
     <div id="statusMessage">
       <center>
         <div style="font-weight:bold;font-size:14px;" id="loadMessage">
-          Starting Up..
+          Starting Up...
         </div>
       </center><br />
 
