AssertExplorer cleanup, part I.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -137,8 +137,7 @@
       </li>
 
       <li id="startup-open-sel2">
-        <h3><a name="open" href="#open">Open</a> a Selenium 2 test file <i>(under
-        development)</i></h3>
+        <h3><a name="open" href="#open">Open</a> a Selenium 2 test file</h3>
       </li>
 
       <li id="startup-suite-import">
