Introduced some missing Sel 2 step types, and (mostly) cleaned up AssertExplorer, which is now called VerifyExplorer.

--- a/seleniumbuilder/chrome/content/html/body.html
+++ b/seleniumbuilder/chrome/content/html/body.html
@@ -153,14 +153,14 @@ to have some difference to give the user the idea of a bit of progress
   </div>
   
   <div id="record-panel" style="display: none;" class="panel">
-    <a href="#assert" name="assert" id="record-assert" class="button">
+    <a href="#assert" name="assert" id="record-verify" class="button">
       <span class="when-off">Record a verification</span><span class="when-on">Record further steps</span>
     </a>
     <a href="#stop" name="stop" id="record-stop-button" class="button">Stop recording</a>
     <img id="record-spinner" src="img/loading.gif" />
     <div>
       <span id="record-help"><br/>Listening for events, click or type in the page to capture another action.</span>
-      <span id="record-assert-help" style="display:none"><br/>Select some text or click on an element in order to register an assertion.</span>
+      <span id="record-verify-help" style="display:none"><br/>Select some text or click on an element in order to register an assertion.</span>
       <span id="record-waitfor-help" style="display:none"><br/>Select some text or click on an element in order to instruct the test to wait for its presence.</span>
     </div>
   </div>
