--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -127,8 +127,8 @@
     <p>Would you like to:</p>
 
     <ul>
-      <li id="startup-import">
-        <h3><a name="import" href="#import">Open</a> a test file</h3>
+      <li id="startup-open-sel1">
+        <h3><a name="startup-open-sel1" href="#startup-open-sel1">Open</a> a Selenium 1 test file</h3>
       </li>
 
       <li id="startup-import-sel2">
