Can now load and save Selenium 1 suite. Tidied up GUI a bit.

--- a/seleniumbuilder/chrome/content/html/body.html
+++ b/seleniumbuilder/chrome/content/html/body.html
@@ -130,7 +130,8 @@ to have some difference to give the user the idea of a bit of progress
   
   <div id="suite-panel" style="display: none;" class="panel">
     <div id="suite-saverequired" style="display: none">Suite has unsaved changes.</div>
-    <div id="suite-cannotsave" style="display: none">Can't save suite: Save all scripts to disk as HTML first.</div>
+    <div id="suite-cannotsave-unsavedscripts" style="display: none">Can't save suite: Save all scripts to disk as HTML first.</div>
+    <div id="suite-cannotsave-notallsel1" style="display: none">Can't save suite: All scripts must be Selenium 1 scripts.</div>
     <div id="edit-suite-playing" style="display: none;">
       <a href="#stop-suite-playback" name="stop-suite-playback" id="edit-suite-stop-playback" class="button">Stop Playback</a>
     </div>
