--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -2,6 +2,7 @@
 <head>
   <script type="text/javascript">
     window.boot = function(bridge) {
+      window.stayAlive = true;
       window.bridge = bridge;
       
       // Load the loader script!
@@ -13,6 +14,14 @@
       // way too.
       document.getElementsByTagName('head')[0].appendChild(script);
     };
+    
+    // If we haven't been told by bridge.boot to stay open, we are probably an orphaned window left
+    // over from the previous session, so we close. 
+    window.assumeDeadBy = setTimeout(function() {
+      if (!window.stayAlive) {
+        window.close();
+      }
+    }, 500);
   </script>
   <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.7.custom.css"></link>
   <link rel="stylesheet" type="text/css" href="css/gui.css"></link>
