First version of Selenium 2 step support overview table.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -158,6 +158,10 @@
       <li id="startup-open-suite-sel1">
         <h3><a name="startup-open-suite-sel1" href="#startup-open-suite-sel1">Open</a> a Selenium 1 test suite</h3>
       </li>
+      
+      <li id="startup-show-steps-table">
+        <h3><a name="startup-show-steps-table" href="#startup-show-steps-table">View</a> Selenium 2 step support table</h3>
+      </li>
 
       <li id="startup-record">
         <h3>Start recording a new script at</h3>
