Improved steps table display. Started fixing negatability.

--- a/seleniumbuilder/chrome/content/html/stepstable.html
+++ b/seleniumbuilder/chrome/content/html/stepstable.html
@@ -20,6 +20,8 @@
       tr.labels { background-color: #ddffdd; font-weight: bold; }
       tr.r0 { background-color: #ffffff; }
       tr.r1 { background-color: #f3f3f3; }
+      .yes { color: #009900; }
+      .no { color: #990000; }
     </style>
   </head>
   <body>
