--- a/seleniumbuilder/chrome/content/html/stepstable.html
+++ b/seleniumbuilder/chrome/content/html/stepstable.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Steps Table</title>
-    <script src="chrome://seleniumbuilder/content/html/js/lib/jquery/jquery-1.3.2.min.js"></script>
+    <script src="chrome://seleniumbuilder/content/html/js/lib/jquery-ui-1.8.17.custom/js/jquery-1.7.1.min.js"></script>
     <style type="text/css">
       body, html {  
         font-size: 11px;
