Made Se Builder name consistent in UI. Started merging in new CSS.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -25,7 +25,7 @@
   </script>
   <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.7.custom.css"></link>
   <link rel="stylesheet" type="text/css" href="css/gui.css"></link>
-  <title>The Selenium Builder</title>
+  <title>The Se Builder</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 
   <div class="header">
     <img id="header-logo" src="img/builder-logo-small.png" alt=
-    "Welcome to Selenium Builder!" />
+    "Welcome to Se Builder!" />
 
     <div id="header-status">
       <span id="heading-startup" style="display: none"></span> <span id="heading-record"
@@ -134,7 +134,7 @@
   </div><!-- Startup screen -->
 
   <div id="startup" style="display: none">
-    <h1>Selenium Builder</h1>
+    <h1>Se Builder</h1>
 
     <p>Would you like to:</p>
 
