Updated steps table to dynamically show whichever exporters are installed.

--- a/seleniumbuilder/chrome/content/html/stepstable.html
+++ b/seleniumbuilder/chrome/content/html/stepstable.html
@@ -16,7 +16,7 @@
         width: 100%;
       }
       
-      td { margin: 0px; padding: 3px; }
+      td { margin: 0px; border-right: 1px dotted #bfee85; padding: 3px; }
       
       tr.labels { background-color: #bfee85; font-weight: bold; }
       tr.r0 { background-color: #ffffff; }
