Cleaned up suite menu code. Recording/verify-exploring now stopped before actions such as adding a new script or discarding the suite.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -78,15 +78,11 @@
         <a href="#">Suite</a>
 
         <ul>
-          <li style="list-style: none"><span id="multiscript-0"></span></li>
-
-          <li id="suite-path"><span id="multiscript-0"></span></li>
-
-          <li><span id="multiscript-0"><a href="#suite-save" name="suite-save" id="suite-save">Save suite</a></span></li>
+          <li><a href="#suite-save" name="suite-save" id="suite-save" class="suite-menu-item">Save suite</a></li>
           
-          <li><span id="multiscript-0"><a href="#suite-save-as" name="suite-save-as" id="suite-save-as">Save suite as...</a></span></li>
+          <li><a href="#suite-save-as" name="suite-save-as" id="suite-save-as" class="suite-menu-item">Save suite as...</a></li>
 
-          <li><span id="multiscript-0"><a href="#suite-discard" name="suite-discard" id="suite-discard">Discard and start over</a></span></li>
+          <li><a href="#suite-discard" name="suite-discard" id="suite-discard" class="suite-menu-item">Discard and start over</a></li>
 
           <li><a href="#suite-recordscript" name="suite-recordscript" id="suite-recordscript">Record new script</a></li>
 
@@ -94,12 +90,11 @@
 
           <li style="list-style: none"><span id="multiscript-1"></span></li>
 
-          <li><span id="multiscript-1"><a href="#suite-removescript" name="suite-removescript" id="suite-removescript">Remove current script</a></span></li>
+          <li><a href="#suite-removescript" name="suite-removescript" id="suite-removescript" class="suite-menu-item">Remove current script</a></li>
 
           <div class="divider"></div>
 
-          <li style="list-style: none"><span id="multiscript-1"><span id=
-          "scriptlist"></span></span></li>
+          <li style="list-style: none"><span id="scriptlist" class="suite-menu-item"></span></li>
         </ul>
       </li>
     </ul>
