Initial plugins GUI. Mostly not yet wired up to anything.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -109,7 +109,11 @@
       </li>
 
       <li id="startup-show-steps-table">
-      <a name="startup-show-steps-table" href="#startup-show-steps-table">&raquo; View Selenium 2 step support table</a>
+        <a name="startup-show-steps-table" href="#startup-show-steps-table">&raquo; View Selenium 2 step support table</a>
+      </li>
+      
+      <li id="startup-plugins">
+        <a name="startup-plugins" href="#startup-plugins">&raquo; Plugins</a>
       </li>
     </ul>
     <div class="startrecording">
@@ -135,6 +139,17 @@
   
   <div id="dialog-attachment-point">
     <!-- Incidential dialogs put themselves into this div. -->
+  </div>
+  
+  <!-- Plugins screen -->
+  <div id="plugins" style="display: none;">
+    <h1>Plugins</h1>
+    <a href="#" class="button" id="plugins-back">&laquo; Back</a>
+    <a href="#" class="button" id="plugins-refresh">Refresh</a>
+    <span id="plugins-loading">Loading... <img src="img/loading.gif" /></span>
+    <ul id="plugins-list">
+      
+    </ul>
   </div>
   
   <!-- The steps -->
