Fixed issue #20 - hopefully. More work on plugin system.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -147,6 +147,7 @@
     <a href="#" class="button" id="plugins-back">&laquo; Back</a>
     <a href="#" class="button" id="plugins-refresh">Refresh</a>
     <span id="plugins-loading">Loading... <img src="img/loading.gif" /></span>
+    <span id="plugins-downloading" style="display: none">Downloading... <img src="img/loading.gif" /></span>
     <ul id="plugins-list">
       
     </ul>
