Started adding plugin hooks: builder.dialogs.show and builder.gui.menu.addItem. Added code to allow asking user for info before exporting.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -37,7 +37,7 @@
       <li>
         <a href="#">File</a>
 
-        <ul>
+        <ul id="file-menu">
           <li id="script-save-li" style="display: none;"><a href="#script-save" name="script-save" id="script-save">Save to server</a></li>
 
           <li><a href="#script-export" name="script-export" id="script-export">Save to disk</a></li>
@@ -53,7 +53,7 @@
       <li>
         <a href="#">Run</a>
 
-        <ul>
+        <ul id="run-menu">
           <li><a href="#run-locally" name="run-locally" id="run-locally">Run test
           locally</a></li>
 
@@ -77,7 +77,7 @@
       <li>
         <a href="#">Suite</a>
 
-        <ul>
+        <ul id="suite-menu">
           <li><a href="#suite-save" name="suite-save" id="suite-save" class="suite-menu-item">Save suite</a></li>
           
           <li><a href="#suite-save-as" name="suite-save-as" id="suite-save-as" class="suite-menu-item">Save suite as...</a></li>
