--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <img src="/img/se-builder.png" style="width:30px"/> 
+        <img src="./img/se-builder.png" style="width:30px"/> 
         <a class="brand" href="#">Se Builder</a>
         <div class="nav-collapse" style="float:right">
           <ul class="nav">
@@ -36,7 +36,7 @@
 
   <div class="container">
       <div class="hero-unit">
-        <img style="float:right;width:45%;border:1px solid gray;" src="/img/builder-redux.png"></img>
+        <img style="float:right;width:45%;border:1px solid gray;" src="./img/builder-redux.png"></img>
         <h1>Se Builder</h1><br>
         <p style="width:600px">A browser add-on that allows you to quickly and easily build and edit your Selenium 1 &amp; 2 tests, then export them to the format of your choosing. <br><br>Currently we are only supporting Firefox, but the codebase is primarily Javascript, CSS and HTML lending itself to be ported to other browser platforms.</p>
         <p><a class="btn btn-primary btn-large" href="https://addons.mozilla.org/firefox/downloads/file/150238/se_builder-2.0-fx.xpi?src=devhub">Install Now &raquo;</a></p>
