While starting remote webdriver session, now displaying a "Connecting..." spinner.

--- a/seleniumbuilder/chrome/content/html/gui.html
+++ b/seleniumbuilder/chrome/content/html/gui.html
@@ -181,6 +181,9 @@
         <span id="edit-clearresults-span" style="display: none;">
           <a href="#edit-clearresults" class="button" name="edit-clearresults" id="edit-clearresults">Clear results</a>
         </span>
+        <span id="edit-rc-connecting" style="display: none; float: right;">
+          Connecting... <img src="img/loading.gif" />
+        </span>
       </div>
 
       <div id="record-panel" style="display: none;" class="panel">
